Login and auth with JWT.
